Explain disabled dynamic agent loading (#259)